# google-cloud-speech-to-text

./: README.md
src_able/: README.md  able_reaction_state.xlsx  no_matching.txt  ssoni_think.txt
src_able/pino_msgs/: CMakeLists.txt  package.xml
src_able/pino_msgs/msg/: PinoAnswer.msg
src_able/pino_wave/: CMakeLists.txt
src_able/pino_wave/msg/: pino_listen.msg
src_able/pino_wave/src/: .pino_message_sturct.py.swp  pino_speak.py  pino_stt.py  pino_think.py  pino_think_xlsx.py
src_pino/: README.md  no_matching.txt  pino_think.txt
src_pino/pino_msgs/msg/: PinoInit.msg
src_pino/pino_wave/: package.xml
src_pino/pino_wave/src/: pino_message_sturct.py  pino_stt.py  pino_think.py  recoding.py
