<?xml version="1.0"?>
<package format="1">
  <name>pino_msgs</name>
  <version>0.0.0</version>
  <description>The pino_msgs package</description>

  <maintainer email="dmitri@todo.todo">dmitri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
